--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Playfair+Display:wght@500&display=swap');
+
 * {
     padding: 0;
     margin: 0;
     border: none;
     scroll-behavior: smooth;
+}
+
+/*fonts*/
+h1,
+h2 {
+    font-family: Playfair Display, sans-serif;
+}
+
+p {
+    font-family: Lato, sans-serif;
 }
 
 /*hamburger-menu*/
@@ -37,4 +49,11 @@
 .hamburger-menu a:hover {
     background-color: #636c87;
     color: #edecec;
+}
+
+/*sections*/
+.home {
+    text-align: left;
+    background-color: #1d1d1d;
+    color: ;
 }
