Adjust color theme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ tr:nth-child(odd) {
 }
 
 .hamburger-menu a {
-    color: #edecec;
+    color: #fbfdfa;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
