--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,26 @@ tr:nth-child(odd) {
     color: #fbfdfa;
 }
 
+#desktop-menu {
+    display: none;
+    width: 100%;
+    height: 100px;
+    background-color: rgba(0, 0, 0, .8);
+    color: white;
+}
+
+#desktop-menu li {
+    display: inline-block;
+    min-width: 60px;
+
+}
+
+#desktop-menu li a {
+    color: white !important;
+    text-decoration: none;
+    padding: 10px 10px 10px 10px;
+}
+
 /*sections*/
 .home {
     height: 100vh;
@@ -147,6 +167,7 @@ tr:nth-child(odd) {
 }
 
 /*responsive layout
+
 phone screen layout*/
 @media screen and (max-width: 480px) {
     .video {
@@ -241,6 +262,14 @@ phone screen layout*/
 
 /*laptop screen layout*/
 @media screen and (min-width: 769px) and (max-width: 1024px) {
+    .hamburger-menu {
+        display: none;
+    }
+
+    #desktop-menu {
+        display: block;
+    }
+
     .video {
         width: 555px;
         height: 312px;
@@ -288,6 +317,14 @@ phone screen layout*/
 
 /*desktop screen layout*/
 @media screen and (min-width: 1025px) and (max-width: 1200px) {
+    .hamburger-menu {
+        display: none;
+    }
+
+    #desktop-menu {
+        display: block;
+    }
+
     .video {
         width: 470px;
         height: 264px;
@@ -335,6 +372,14 @@ phone screen layout*/
 
 /*tv screen layout*/
 @media screen and (min-width: 1201px) {
+    .hamburger-menu {
+        display: none;
+    }
+
+    #desktop-menu {
+        display: block;
+    }
+
     .video {
         width: 480px;
         height: 270px;
@@ -377,12 +422,5 @@ phone screen layout*/
     .about-me p,
     .contact p {
         padding: 20px 150px;
-    }
-
-    .footer {
-        width: 98%;
-        height: 20px;
-        padding: 5px 15px;
-        font-size: 120%;
     }
 }
