--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,6 +148,7 @@ tr:nth-child(odd) {
     display: flex;
     flex-direction: row;
     position: fixed;
+    width: 100%;
     bottom: 0;
     text-align: center;
     background-color: rgba(0, 0, 0, .8);
@@ -157,7 +158,7 @@ tr:nth-child(odd) {
 .socials {
     margin-left: auto;
     margin-right: auto;
-    width: 100px;
+    width: 170px;
 }
 
 .footer a {
@@ -167,7 +168,6 @@ tr:nth-child(odd) {
 
 .socials>li {
     display: inline;
-    margin: 1%;
 }
 
 /*responsive layout
@@ -426,5 +426,20 @@ phone screen layout*/
     .about-me p,
     .contact p {
         padding: 20px 150px;
+    }
+
+    .footer {
+        height: 20px;
+        padding: 5px 15px;
+        font-size: 120%;
+    }
+
+    .footer span {
+        margin-right: 60px;
+        margin-left: 30px;
+    }
+
+    .socials>li {
+        margin: 10px;
     }
 }
