--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,6 +168,7 @@ tr:nth-child(odd) {
 
 .socials>li {
     display: inline;
+    margin: 10px;
 }
 
 /*responsive layout
@@ -216,6 +217,16 @@ phone screen layout*/
     .contact p {
         padding: 20px 40px;
     }
+
+    .footer {
+        height: 15px;
+        padding: 3px 15px;
+        font-size: 80%;
+    }
+
+    .footer span {
+        margin-right: 30px;
+    }
 }
 
 /*tablet screen layout*/
@@ -261,6 +272,16 @@ phone screen layout*/
     .about-me p,
     .contact p {
         padding: 20px 45px;
+    }
+
+    .footer {
+        height: 14px;
+        padding: 3px 15px;
+        font-size: 80%;
+    }
+
+    .footer span {
+        margin-right: 30px;
     }
 }
 
@@ -317,6 +338,15 @@ phone screen layout*/
         padding: 20px 150px;
     }
 
+    .footer {
+        height: 14px;
+        padding: 3px 15px;
+        font-size: 80%;
+    }
+
+    .footer span {
+        margin-right: 30px;
+    }
 }
 
 /*desktop screen layout*/
@@ -371,6 +401,16 @@ phone screen layout*/
     .about-me p,
     .contact p {
         padding: 20px 150px;
+    }
+
+    .footer {
+        height: 16px;
+        padding: 3px 15px;
+        font-size: 90%;
+    }
+
+    .footer span {
+        margin-right: 30px;
     }
 }
 
@@ -437,9 +477,5 @@ phone screen layout*/
     .footer span {
         margin-right: 60px;
         margin-left: 30px;
-    }
-
-    .socials>li {
-        margin: 10px;
     }
 }
