--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,7 @@ tr:nth-child(odd) {
     position: fixed;
     right: 0;
     top: 0;
+    z-index: 5;
 }
 
 .hamburger-menu a:hover {
@@ -70,12 +71,15 @@ tr:nth-child(odd) {
 }
 
 #desktop-menu {
+    position: fixed;
+    top: 0;
     text-align: center;
     display: none;
     width: 100%;
     height: 35px;
     background-color: rgba(0, 0, 0, .8);
     color: #fbfdfa;
+    z-index: 5;
 }
 
 #desktop-menu li {
