--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,7 +214,7 @@ textarea {
     text-align: center;
     font-size: 100%;
     background-color: #657D5F;
-    color: #fbfdfa;
+    color: black;
     display: block;
 }
 
